--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -25,6 +25,7 @@
     .block {
       align-items: center;
       background-color: $greyLight;
+      box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.25);
       display: flex;
       height: 250px;
       font-size: 2.4rem;
@@ -40,6 +41,27 @@
 
       &:last-child {
         margin-bottom: 0;
+      }
+    }
+  }
+
+  &.home {
+    .wrapper {
+      padding: 0;
+
+      @media ($tablet) {
+        padding: 0 $spacing-x2;
+      }
+
+      .block {
+        color: $white;
+        margin-bottom: 0;
+        background: rgba(0, 0, 0, 0.5) url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg') no-repeat center center;
+        background-blend-mode: multiply;
+
+        &.price {
+          background-image: url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg');
+        }
       }
     }
   }
