--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -259,6 +259,7 @@ h1 {
     .row .block-inner .block {
       align-items: center;
       background-color: #f4f4f4;
+      box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.25);
       display: flex;
       height: 250px;
       font-size: 2.4rem;
@@ -272,6 +273,18 @@ h1 {
           font-size: 2rem; } }
       .row .block-inner .block:last-child {
         margin-bottom: 0; }
+  .row.home .wrapper {
+    padding: 0; }
+    @media (min-width: 768px) {
+      .row.home .wrapper {
+        padding: 0 16px; } }
+    .row.home .wrapper .block {
+      color: #ffffff;
+      margin-bottom: 0;
+      background: rgba(0, 0, 0, 0.5) url("http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg") no-repeat center center;
+      background-blend-mode: multiply; }
+      .row.home .wrapper .block.price {
+        background-image: url("http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg"); }
   .row.about {
     background-color: #333333;
     color: #ffffff;
